--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "s-payments",
-  "version": "1.0.14",
+  "name": "test-payments",
+  "version": "1.0.24",
   "description": "bSecure Payment Plugin is a JavaScript library that allows you to securely process your payments. This plugin instantly creates a form that adheres to PCI, HIPAA, GDPR, or CCPA security requirements.",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
+  "scripts": {
+    "clean": "rm -rf ./lib",
+    "dev": "tsc -w",
+    "build": "npm run clean && tsc",
+    "prepack": "npm run build"
+  },
   "keywords": [
     "payments",
     "node",
@@ -11,7 +18,7 @@
     "bsecure",
     "bsecure",
     "payment",
-    "payment gateway" 
+    "payment gateway"
   ],
   "dependencies": {},
   "repository": {
@@ -24,7 +31,10 @@
     "url": "https://github.com/bSecureCheckout/bsecure-payments-js/issues"
   },
   "homepage": "https://github.com/bSecureCheckout/bsecure-payments-js#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^18.14.0",
+    "typescript": "^4.9.5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
