--- a/examples/reactjs/package.json
+++ b/examples/reactjs/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-toast-notifications": "^2.5.1",
+    "test-payments": "^1.0.45",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
